# bolyra

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.gateway  ONBOARDING.html  ONBOARDING.md  README.md  SECURITY.md  TRADEMARKS.md  WIKI.md  contact-wan-agus-rippling.md  outbound-rippling-one-pager.md  outbound-robinhood-one-pager.md  package-lock.json  package.json
.claude/: README.md  settings.json
.github/: CODEOWNERS  dependabot.yml  smoke-test.cjs  smoke-test.mjs
circuits/: FORMAL-PROPERTIES.md  package-lock.json  package.json
circuits-package/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
contracts/: hardhat.config.js  package-lock.json  package.json
decks/: theseus-partnership-2026-06-29.md
delegation/: LICENSE  OUTREACH.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
demo/: README.md  package-lock.json  package.json  walkthrough.ts
differentiation-autoresearch/: README.md  _imports.py  candidates.json  judge.py  mutator.py  plateau_detector.py  rubric.md  run_loop.py  surgical_refine_c7.py  surgical_refine_c7_v2.py  tier1_survey.py  tier2_construct.py  tier3_adversarial.py
discovery-autoresearch/: _shared.py  judge.py  primitives.json  program.md  run_loop.py  run_tier1_discover.py  run_tier2_validate.py  run_tier3_challenge.py  scoring.py
docs/: mpp-authorization-companion.md  owasp-agentic-mapping.md  quickstart.md  release.md
drafts/: IDENTITYOS-PROV-001-filing-ready.html  IDENTITYOS-PROV-001-filing-ready.md  IDENTITYOS-PROV-001-filing.html  adversarial-review-r2.md  adversarial-review-r3.md  adversarial-review.md  codex-patent-review.md  ietf-mapping-1pager.md  ietf-outreach-email.md  launch-strategy-adversarial-review.md  outbound-agent-startups.md  provisional-patent-identityos.md  strategy-wedge-review.md
examples/: quickstart.ts
integrations/: README.md  requirements.txt
integrations/langchain/: README.md  __init__.py  bolyra_auth_tool.py  bolyra_delegate_tool.py  pyproject.toml  test_langchain_tools.py
integrations/langchain/bolyra_langchain/: __init__.py  _compat.py  auth_tool.py  callbacks.py  delegate_tool.py  sd_jwt_tool.py  session.py  types.py
integrations/langchain/tests/: conftest.py  test_auth_tool.py  test_delegate_tool.py  test_sd_jwt_tool.py  test_session.py
integrations/langchain/typescript/: README.md  delegation-example.ts
integrations/openai-agents/: README.md  delegation-example.ts  pyproject.toml
integrations/openai-agents/bolyra_agents/: __init__.py  _tracing.py  _verify.py  auth_context.py  guardrail.py  mcp_auth.py  tool_wrapper.py  types.py
integrations/openai-agents/tests/: conftest.py  test_auth_context.py  test_guardrail.py  test_mcp_auth.py  test_tool_wrapper.py  test_tracing.py  test_types.py  test_verify.py
landing/: 402.html  agent-spend.html  benchmark.html  blog-1.html  blog-2.html  blog-3.html  blog-4.html  blog-5.html  blog-6.html  blog.html  deploy.sh  index.html  playground.html  scenes_cli.jsx  scenes_replaycheck.jsx  school-kit.jsx  school-scenes.jsx  school.html  verify.sh  video-cli.html  video-delegation.html  video-devmode.html  video-frameworks.html  video-handshake.html  video-oauth.html  video-offchain.html  video-receipts.html  video-replay-check.html  video.html
patent-autoresearch/: README.md  _shared.py  baseline.py  case_law.json  judge.py  mutator.py  personas.json  prior_art.json  program.md  run_loop.py  run_tier1_attack.py  run_tier2_claim.py  scoring.py  seed_findings.json  test_baseline.py  test_judge.py  test_mutator.py  test_run_loop.py  test_scoring.py  test_tier1.py  test_tier2.py
pilot/: .gitignore  INTEGRATION.md  RUNBOOK.md  partner-config.example.json  policy-config.example.json
protocol-autoresearch/: FINAL_REPORT.md  README.md  adversarial.py  baseline.py  conftest.py  judge.py  program.md  run_loop.py  run_tier1.py  run_tier2.py  run_tier3_review.py  scoring.py  seed_candidates.json  test_adversarial.py  test_baseline.py  test_judge.py  test_run_loop.py  test_scoring.py  test_tier1.py  test_tier2.py  test_tier3.py
protocol-autoresearch/experiments/tier2_007_formal_verifier_scope_bitmask_cumulative_invariant/: Cargo.toml  README.md  candidate.json  outline.json
protocol-autoresearch/experiments/tier2_007_formal_verifier_scope_bitmask_cumulative_invariant/docs/: scope_bitmask_audit_report.md
protocol-autoresearch/experiments/tier2_007_formal_verifier_scope_bitmask_cumulative_invariant/specs/: scope_bitmask_invariant.md
protocol-autoresearch/experiments/tier2_007_formal_verifier_scope_bitmask_cumulative_invariant/src/delegation/: scope_bitmask.rs
protocol-autoresearch/experiments/tier2_007_formal_verifier_scope_bitmask_cumulative_invariant/tests/: scope_bitmask_negative.rs
raw/: autoresearch-differentiation  autoresearch-discovery  autoresearch-patent  autoresearch-protocol  patents  plans  sdk-python  specs  strategy
registry/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
reports/: codex-challenge-2026-05-29.md
scripts/: prospect-pack.sh  smoke-test.sh
sdk/: QUICKSTART.md  README.md  jest.config.js  package-lock.json  package.json  server.json  tsconfig.json
sdk-python/: NOTICE  README.md  pyproject.toml
sdk-python/bolyra/: __init__.py  _bridge.py  delegation.py  envelope.py  errors.py  handshake.py  identity.py  sd_jwt.py  types.py
sdk-python/tests/: test_crewai_integration.py  test_delegation.py  test_envelope.py  test_identity.py  test_langchain_integration.py  test_sd_jwt.py  test_types.py
spec/: CONFORMANCE.md  conformance-runner.js  conformance-schema.json  did-method-bolyra.md  draft-bolyra-mutual-zkp-auth-00.md  draft-bolyra-mutual-zkp-auth-01.md  draft-kondoju-evc-00.md  external-verifier-contract-v1.md  ietf-draft-evc-outline.md  receipt-signer-discovery-v1.md  reference-host.js  test-vectors.json
spec/reference-host-rs/: Cargo.toml  README.md
spec/reference-host-rs/src/: lib.rs  main.rs
strategy/: 2026-06-27-gtm-codex-final.md  codex-challenge-strategy.md  (+3 more)
tasks/: lessons.md  (+6 more)
(+2552 files in other folders)
