[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bolyra"
version = "0.1.0"
description = "Python SDK for Bolyra — unified ZKP identity for humans and AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Bolyra", email = "sdk@bolyra.ai" }]
keywords = ["zkp", "identity", "ai-agents", "langchain", "crewai", "zero-knowledge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.ruff]
target-version = "py310"
line-length = 100
