[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bolyra-agents"
version = "0.1.0"
description = "OpenAI Agents SDK adapter for Bolyra -- guardrails, tool wrappers, and MCP auth"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Bolyra", email = "sdk@bolyra.ai" }]
keywords = ["bolyra", "openai-agents", "zkp", "identity", "ai-agents", "delegation", "sd-jwt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "bolyra>=0.4.0",
    "openai-agents>=0.1.0",
    "PyJWT[crypto]>=2.8.0",
]

[project.urls]
Homepage = "https://bolyra.ai"
Repository = "https://github.com/bolyra/bolyra"
Issues = "https://github.com/bolyra/bolyra/issues"
Documentation = "https://github.com/bolyra/bolyra#readme"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.4"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
